Improving tables, seeders and nameclature
