# app/Http/Controllers/SignatureController.php
@@ -2,18 +2,18 @@
 
 namespace App\Http\Controllers;
 
-use App\Models\Assinatura;
+use App\Models\Signature;
 use App\Models\User;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Http\Request;
 
-class AssinaturaController extends Controller
+class SignatureController extends Controller
 {
     // GET
-    public function getAllAssinaturas()
+    public function getAllSignatures()
     {
         try {
-            $assinaturas = Assinatura::all();
+            $signatures = Signature::all();
         } catch (\Exception $e) {
             return response()->json([
                 'message' => 'Ocorreu um erro ao realizar a consulta.',
@@ -22,7 +22,7 @@ class AssinaturaController extends Controller
             ], 500);
         };
 
-        if (count($assinaturas) == 0) {
+        if (count($signatures) == 0) {
             return response()->json([
                 'message' => 'Ainda não há assinaturas inseridas.',
                 'code' => 204
@@ -30,27 +30,27 @@ class AssinaturaController extends Controller
         }
 
         return response()->json([
-            'data' => $assinaturas,
+            'data' => $signatures,
             'code' => 200
         ], 200);
     }
 
     // GET
-    public function getAssinatura($id = null)
+    public function getSignature($id = null)
     {
         if (!is_numeric($id)) return response()->json(['message' => 'O ID deve ser um número inteiro', 'code' => 400], 400);
 
         if (is_null($id)) return response()->json(['message' => 'Você esqueceu de informar o ID da assinatura', 'code' => 400], 400);
 
         try {
-            $assinaturaExist = Assinatura::where('id', $id)
+            $signatureExist = Signature::where('id', $id)
                 ->exists();
 
-            if (!$assinaturaExist) return response()->json(['message' => 'O ID informado não é de uma assinatura válida', 'code' => 406], 406);
+            if (!$signatureExist) return response()->json(['message' => 'O ID informado não é de uma assinatura válida', 'code' => 406], 406);
 
-            $assinaturas = Assinatura::find($id);
+            $signatures = Signature::find($id);
 
-            if ($assinaturas == null) {
+            if ($signatures == null) {
                 return response()->json([
                     'message' => 'A assinatura buscada não existe',
                     'code' => 204
@@ -65,16 +65,16 @@ class AssinaturaController extends Controller
         };
 
         return response()->json([
-            'data' => $assinaturas,
+            'data' => $signatures,
             'code' => 200
         ], 200);
     }
 
     // POST
-    public function insertAssinaturas(Request $request)
+    public function insertSignatures(Request $request)
     {
         if ($this->validateEmptyField($request)) return response()->json([
-            'message' => 'os campos: user_id, descrição, vencimento e valor são obrigatórios',
+            'message' => 'os campos: user_id, descrição, due_date e amount são obrigatórios',
             'code' => 400
         ], 400);
 
@@ -97,17 +97,17 @@ class AssinaturaController extends Controller
                     406
                 );
 
-            $assinatura = Assinatura::create([
+            $signature = Signature::create([
                 'user_id' => $request->user_id,
-                'descricao' => $request->descricao,
-                'vencimento' => $request->vencimento,
-                'valor' => $request->valor,
-                'status_fatura' => $request->status_fatura,
+                'description' => $request->description,
+                'due_date' => $request->due_date,
+                'amount' => $request->amount,
+                'status_invoice' => $request->status_invoice,
             ]);
 
             return response()->json([
                 'message' => 'Assinatura inserida com sucesso',
-                'data' => $assinatura,
+                'data' => $signature,
                 'code' => 201
             ], 201);
         } catch (\Exception $e) {
@@ -120,12 +120,12 @@ class AssinaturaController extends Controller
     }
 
     // PUT
-    public function updateAssinatura(Request $request, $id = null)
+    public function updateSignature(Request $request, $id = null)
     {
         if (!is_numeric($id)) return response()->json(['message' => 'O ID deve ser um número inteiro', 'code' => 400], 400);
 
         if ($this->validateEmptyField($request)) return response()->json([
-            'message' => 'os campos: user_id, descricao, vencimento, valor, e status_fatura são obrigatórios',
+            'message' => 'os campos: user_id, description, due_date, amount, e status_invoice são obrigatórios',
             'code' => 400
         ], 400);
 
@@ -139,10 +139,10 @@ class AssinaturaController extends Controller
         try {
             if (is_null($id)) return response()->json(['message' => 'Você esqueceu de informar o ID da assinatura'], 400);
 
-            $assinaturaExist = Assinatura::where('id', $id)
+            $signatureExist = Signature::where('id', $id)
                 ->exists();
 
-            if (!$assinaturaExist) return response()->json(['message' => 'O ID da assinatura informada na URL não existe', 'code' => 406], 406);
+            if (!$signatureExist) return response()->json(['message' => 'O ID da assinatura informada na URL não existe', 'code' => 406], 406);
 
             $userExist = user::where('id', $request->user_id)
                 ->exists();
@@ -150,18 +150,18 @@ class AssinaturaController extends Controller
             if (!$userExist)
                 return response()->json(['message' => 'O user_id informado não é um código válido, favor informe um ID de user válido', 'code' => 406], 406);
 
-            Assinatura::where('id', $id)
+            Signature::where('id', $id)
                 ->update([
                     'user_id' => $request->user_id,
-                    'descricao' => $request->descricao,
-                    'vencimento' => $request->vencimento,
-                    'valor' => $request->valor,
-                    'status_fatura' => $request->status_fatura,
+                    'description' => $request->description,
+                    'due_date' => $request->due_date,
+                    'amount' => $request->amount,
+                    'status_invoice' => $request->status_invoice,
                 ]);
 
             return response()->json([
                 'message' => 'A assinatura foi atualizada com sucesso!',
-                'data' => Assinatura::find($id),
+                'data' => Signature::find($id),
                 'code' => 201
             ], 201);
         } catch (\Exception $e) {
@@ -174,23 +174,23 @@ class AssinaturaController extends Controller
     }
 
     // DELETE
-    public function deleteAssinatura($id = null)
+    public function deleteSignature($id = null)
     {
         if (!is_numeric($id)) return response()->json(['message' => 'O ID deve ser um número inteiro', 'code' => 400], 400);
 
         if (is_null($id)) return response()->json(['message' => 'Você esqueceu de informar o ID da assinatura', 'code' => 400], 400);
 
         try {
-            $assinaturaExist = Assinatura::where('id', $id)
+            $signatureExist = Signature::where('id', $id)
                 ->exists();
 
-            if (!$assinaturaExist) return response()->json(['message' => 'O ID informado não é de uma assinatura válida', 'code' => 406], 406);
+            if (!$signatureExist) return response()->json(['message' => 'O ID informado não é de uma assinatura válida', 'code' => 406], 406);
 
-            Assinatura::where('id', $id)->delete();
+            Signature::where('id', $id)->delete();
 
             return response()->json([
                 'message' => 'A assinatura com ID ' . $id . ' foi deletada com sucesso!',
-                'data' => Assinatura::all(),
+                'data' => Signature::all(),
                 'code' => 200
             ], 200);
         } catch (\Exception $e) {
@@ -204,7 +204,7 @@ class AssinaturaController extends Controller
 
     function validateEmptyField($request)
     {
-        if (!isset($request->user_id) || !isset($request->descricao) || !isset($request->vencimento) || !isset($request->valor) || !isset($request->status_fatura)) {
+        if (!isset($request->user_id) || !isset($request->description) || !isset($request->due_date) || !isset($request->amount) || !isset($request->status_invoice)) {
             return true;
         } else {
             return false;
@@ -215,10 +215,10 @@ class AssinaturaController extends Controller
     {
         $validator = Validator::make($request->all(), [
             'user_id' => 'required|integer',
-            'descricao' => 'required|string',
-            'vencimento' => 'required|date',
-            'valor' => 'required|integer',
-            'status_fatura' => 'required|string|in:emitido,aguardando',
+            'description' => 'required|string',
+            'due_date' => 'required|date',
+            'amount' => 'required|integer',
+            'status_invoice' => 'required|string|in:emitido,aguardando',
         ]);
 
         return $validator->fails() ? $validator : false;
